--- a/main.ipynb
+++ b/main.ipynb
@@ -84,9 +84,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cp_rand_elipsoids(n_dim : int = 2, n_samples : int= 100, random_states: list = None):\n",
+    "def cp_rand_elipsoids(n_dim: int = 2, n_samples: int = 100, random_states: list = None):\n",
     "    mu = np.ones(n_dim)\n",
-    "    \n",
+    "\n",
     "    if random_states is None:\n",
     "        random_states = np.random.randint(0, 4294967295, size=n_samples)\n",
     "\n",
@@ -98,7 +98,7 @@
     "\n",
     "        x = cp.Variable(n_dim)\n",
     "\n",
-    "        objective = cp.Minimize(cp.quad_form(x-mu, A))\n",
+    "        objective = cp.Minimize(cp.quad_form(x - mu, A))\n",
     "\n",
     "        constraints = [cp.norm(x) <= 1]\n",
     "\n",
@@ -108,8 +108,7 @@
     "\n",
     "        cases.append((A, x.value, result))\n",
     "\n",
-    "    return cases\n",
-    "    "
+    "    return cases"
    ]
   },
   {
@@ -118,11 +117,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ensure_optim(affine_operator, opt_point_candidate, eps = 0.1):\n",
-    "    anti_grad_quadform = - ( (affine_operator + affine_operator.T) @ opt_point_candidate - (affine_operator + affine_operator.T) @ np.ones_like(opt_point_candidate) )\n",
+    "def ensure_optim(affine_operator, opt_point_candidate, eps=0.1):\n",
+    "    anti_grad_quadform = -(\n",
+    "        (affine_operator + affine_operator.T) @ opt_point_candidate\n",
+    "        - (affine_operator + affine_operator.T) @ np.ones_like(opt_point_candidate)\n",
+    "    )\n",
     "    grad_constraint = opt_point_candidate * 2\n",
     "\n",
-    "    cos_sim = np.dot(anti_grad_quadform, grad_constraint)/(np.linalg.norm(anti_grad_quadform)*np.linalg.norm(grad_constraint))\n",
+    "    cos_sim = np.dot(anti_grad_quadform, grad_constraint) / (\n",
+    "        np.linalg.norm(anti_grad_quadform) * np.linalg.norm(grad_constraint)\n",
+    "    )\n",
     "\n",
     "    return np.abs(cos_sim - 1) < eps"
    ]
