--- a/main.ipynb
+++ b/main.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from sklearn.datasets import make_spd_matrix\n",
-    "import cvxpy as cp"
+    "import cvxpy as cp\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +101,7 @@
     "\n",
     "        objective = cp.Minimize(cp.quad_form(x - mu, A))\n",
     "\n",
-    "        constraints = [cp.norm(x) <= 1]\n",
+    "        constraints = [cp.norm2(x) <= 1]\n",
     "\n",
     "        prob = cp.Problem(objective, constraints)\n",
     "\n",
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,119 +134,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ndims = range(10, 110, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
+      "+--------------------------------------------+\n",
+      "|dim= 10  |\t True | avg_time: 0.0048 sec |\n",
+      "|dim= 20  |\t True | avg_time: 0.0053 sec |\n",
+      "|dim= 30  |\t True | avg_time: 0.0056 sec |\n",
+      "|dim= 40  |\t True | avg_time: 0.0062 sec |\n",
+      "|dim= 50  |\t True | avg_time: 0.0100 sec |\n",
+      "|dim= 60  |\t True | avg_time: 0.0139 sec |\n",
+      "|dim= 70  |\t True | avg_time: 0.0149 sec |\n",
+      "|dim= 80  |\t True | avg_time: 0.0184 sec |\n",
+      "|dim= 90  |\t True | avg_time: 0.0921 sec |\n",
+      "|dim= 100  |\t True | avg_time: 0.1137 sec |\n",
+      "+--------------------------------------------+\n",
+      "^_^\n"
      ]
     }
    ],
    "source": [
-    "for c in cp_rand_elipsoids(10):\n",
-    "    print(ensure_optim(c[0], c[1]))"
+    "print(\"+--------------------------------------------+\")\n",
+    "for dim in ndims:\n",
+    "    time_start = time.time()\n",
+    "    print(\n",
+    "        \"|dim=\",\n",
+    "        dim,\n",
+    "        \" |\\t\",\n",
+    "        np.all(\n",
+    "            np.asarray(\n",
+    "                [ensure_optim(case[0], case[1]) for case in cp_rand_elipsoids(dim)]\n",
+    "            )\n",
+    "        ),\n",
+    "        \"|\",\n",
+    "        \"avg_time:\",\n",
+    "        f\"{(time.time()-time_start)/100:.4f} sec |\",\n",
+    "    )\n",
+    "print(\"+--------------------------------------------+\")\n",
+    "\n",
+    "print(\"^_^\")"
    ]
   },
   {
