--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -148,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def str_cvx_sgd_solve_elipsoid(A, mu, x_init, f_star, dim_sample_ration = \"single\", eps=0.01, max_iters=10000, return_history=False):\n",
+    "def str_cvx_sgd_solve_elipsoid(A, mu, x_init, f_star, dim_sample_ratio = \"single\", eps=0.01, max_iters=10000, return_history=False):\n",
     "    \n",
     "    n_dims = len(mu)\n",
     "\n",
