--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -152,11 +152,11 @@
     "    \n",
     "    n_dims = len(mu)\n",
     "\n",
-    "    if dim_sample_ration == \"single\":\n",
+    "    if dim_sample_ratio == \"single\":\n",
     "        m_dims = 1\n",
     "\n",
     "    else:\n",
-    "        m_dims = int(dim_sample_ration * n_dims)\n",
+    "        m_dims = int(dim_sample_ratio * n_dims)\n",
     "\n",
     "    alpha = np.min(np.linalg.eigvals(A*2))\n",
     "\n",
@@ -195,6 +195,13 @@
     "        \n",
     "    return x_new, f_val, iterations, operations"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
