--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def quadform_grad(A, x, mu): #Complexity of 1st oracle is n + n^2\n",
+    "def quadform_grad(A, x, mu):  # Complexity of 1st oracle is n + n^2\n",
     "    return A @ (x - mu) * 2"
    ]
   },
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "def atom_quadform_grad(A, x, mu, i):\n",
-    "    return np.dot(A[:,i], x-mu) * 2"
+    "    return np.dot(A[:, i], x - mu) * 2"
    ]
   },
   {
@@ -109,9 +109,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def str_cvx_gd_solve_elipsoid(A, mu, x_init, f_star, eps=0.01, max_iters=10000, return_history=False):\n",
-    "    \n",
-    "    alpha = np.min(np.linalg.eigvals(A*2))\n",
+    "def str_cvx_gd_solve_elipsoid(\n",
+    "    A, mu, x_init, f_star, eps=0.01, max_iters=10000, return_history=False\n",
+    "):\n",
+    "\n",
+    "    alpha = np.min(np.linalg.eigvals(A * 2))\n",
     "\n",
     "    lr = 2 / alpha\n",
     "\n",
@@ -119,26 +121,26 @@
     "\n",
     "    iterations = 0\n",
     "    operations = 0\n",
-    "    \n",
+    "\n",
     "    precision_history = [(x - mu).T @ A @ (x - mu) - f_star]\n",
     "\n",
     "    while iterations < max_iters:\n",
     "\n",
     "        grad = quadform_grad(A, x, mu)\n",
-    "        x_new = project_to_constraint(x - lr/(iterations+1) * grad)\n",
+    "        x_new = project_to_constraint(x - lr / (iterations + 1) * grad)\n",
     "        f_val = (x_new - mu).T @ A @ (x_new - mu)\n",
-    "        \n",
+    "\n",
     "        x = x_new\n",
     "        iterations += 1\n",
     "\n",
     "        precision_history.append(abs(f_val - f_star))\n",
-    "        \n",
+    "\n",
     "        if abs(f_val - f_star) <= eps:\n",
     "            break\n",
     "\n",
     "    if return_history:\n",
     "        return x_new, iterations, f_val, precision_history\n",
-    "        \n",
+    "\n",
     "    return x_new, f_val, iterations, operations"
    ]
   },
@@ -148,8 +150,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def str_cvx_sgd_solve_elipsoid(A, mu, x_init, f_star, dim_sample_ratio = \"single\", eps=0.01, max_iters=10000, return_history=False):\n",
-    "    \n",
+    "def str_cvx_sgd_solve_elipsoid(\n",
+    "    A,\n",
+    "    mu,\n",
+    "    x_init,\n",
+    "    f_star,\n",
+    "    dim_sample_ratio=\"single\",\n",
+    "    eps=0.01,\n",
+    "    max_iters=10000,\n",
+    "    return_history=False,\n",
+    "):\n",
+    "\n",
     "    n_dims = len(mu)\n",
     "\n",
     "    if dim_sample_ratio == \"single\":\n",
@@ -158,9 +169,9 @@
     "    else:\n",
     "        m_dims = int(dim_sample_ratio * n_dims)\n",
     "\n",
-    "    alpha = np.min(np.linalg.eigvals(A*2))\n",
+    "    alpha = np.min(np.linalg.eigvals(A * 2))\n",
     "\n",
-    "    lr = 2 / alpha\n",
+    "    lr = 2 / (alpha * m_dims)\n",
     "\n",
     "    x_new = x_init.copy()\n",
     "\n",
@@ -171,28 +182,28 @@
     "\n",
     "    while iterations < max_iters:\n",
     "\n",
-    "        step_lr = lr/(iterations+1)\n",
+    "        step_lr = lr / (iterations + 1)\n",
     "\n",
     "        sampled_dims = np.random.choice(n_dims, size=m_dims, replace=False)\n",
     "\n",
     "        for i in sampled_dims:\n",
     "            x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i)\n",
     "\n",
-    "        x_new = project_to_constraint(x_new/m_dims)\n",
+    "        x_new = project_to_constraint(x_new)\n",
     "\n",
     "        f_val = (x_new - mu).T @ A @ (x_new - mu)\n",
-    "        \n",
+    "\n",
     "        x = x_new\n",
     "        iterations += 1\n",
     "\n",
     "        precision_history.append(abs(f_val - f_star))\n",
-    "        \n",
+    "\n",
     "        if abs(f_val - f_star) <= eps:\n",
     "            break\n",
     "\n",
     "    if return_history:\n",
     "        return x_new, iterations, f_val, precision_history\n",
-    "        \n",
+    "\n",
     "    return x_new, f_val, iterations, operations"
    ]
   },
