--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -155,7 +155,7 @@
     "    mu,\n",
     "    x_init,\n",
     "    f_star,\n",
-    "    dim_sample_ratio=\"single\",\n",
+    "    dim_sample_ratio=\"single\", # MAY BE FLOAT (0, 1]\n",
     "    eps=0.01,\n",
     "    max_iters=10000,\n",
     "    return_history=False,\n",
@@ -187,7 +187,7 @@
     "        sampled_dims = np.random.choice(n_dims, size=m_dims, replace=False)\n",
     "\n",
     "        for i in sampled_dims:\n",
-    "            x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i)\n",
+    "            x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i) * n_dims\n",
     "\n",
     "        x_new = project_to_constraint(x_new)\n",
     "\n",
