--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -155,7 +155,7 @@
     "    mu,\n",
     "    x_init,\n",
     "    f_star,\n",
-    "    dim_sample_ratio=\"single\", # MAY BE FLOAT (0, 1]\n",
+    "    dim_sample_ratio=\"single\", # MAY BE FLOAT in (0, 1]\n",
     "    eps=0.01,\n",
     "    max_iters=10000,\n",
     "    return_history=False,\n",
@@ -169,9 +169,11 @@
     "    else:\n",
     "        m_dims = int(dim_sample_ratio * n_dims)\n",
     "\n",
+    "    dim_sample_ratio = m_dims/n_dims\n",
+    "\n",
     "    alpha = np.min(np.linalg.eigvals(A * 2))\n",
     "\n",
-    "    lr = 2 / (alpha * m_dims)\n",
+    "    lr = 2 / (alpha*dim_sample_ratio)\n",
     "\n",
     "    x_new = x_init.copy()\n",
     "\n",
@@ -187,7 +189,7 @@
     "        sampled_dims = np.random.choice(n_dims, size=m_dims, replace=False)\n",
     "\n",
     "        for i in sampled_dims:\n",
-    "            x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i) * n_dims\n",
+    "            x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i)\n",
     "\n",
     "        x_new = project_to_constraint(x_new)\n",
     "\n",
