testing stats runnables

--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
     "    iterations = 0\n",
     "    operations = 0\n",
     "\n",
-    "    precision_history = [(x - mu).T @ A @ (x - mu) - f_star]\n",
+    "    precision_history = [(x_new - mu).T @ A @ (x_new - mu) - f_star]\n",
     "\n",
     "    while iterations < max_iters:\n",
     "\n",
@@ -207,6 +207,185 @@
     "        return x_new, iterations, f_val, precision_history\n",
     "\n",
     "    return x_new, f_val, iterations, operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rand_elipsoids_sol_stats_gd(\n",
+    "    n_dim: int = 2, n_samples: int = 100, n_init_states = 100, random_states: list = None, eps=0.01\n",
+    "):\n",
+    "    mu = np.ones(n_dim)\n",
+    "\n",
+    "    if random_states is None:\n",
+    "        random_states = np.random.randint(0, 4294967295, size=n_samples)\n",
+    "\n",
+    "    affine_ops = [make_spd_matrix(n_dim, random_state=state) for state in random_states]\n",
+    "    \n",
+    "    cases = []\n",
+    "\n",
+    "    for i, A in enumerate(affine_ops):\n",
+    "\n",
+    "        solution = solve_elipsoid(A, mu)\n",
+    "\n",
+    "        eig_vigals = np.linalg.eigvals(A)\n",
+    "        conditional_number = max(eig_vigals) / min(eig_vigals)\n",
+    "\n",
+    "\n",
+    "        for _ in range(n_init_states):\n",
+    "\n",
+    "            x_init = project_to_constraint(np.random.randn(n_dim))\n",
+    "            x_opt, f_val, iters, ops = str_cvx_gd_solve_elipsoid(A, mu, x_init, solution[-1], eps=eps)\n",
+    "            \n",
+    "            cases.append({\n",
+    "                \"n_dims\": n_dim,\n",
+    "                \"example_id\" : i,\n",
+    "                \"conditional_number\": conditional_number,\n",
+    "                \"Lipschitz_L\" : max(eig_vigals),\n",
+    "                \"strong_convexity_alpha\": min(eig_vigals)*2,\n",
+    "                \"is_kkt_optimal\": is_kkt_optimal(quadform_grad(A, x_opt, mu), constraint_grad(x_opt)),\n",
+    "                \"solution_delta\": np.abs(solution[-1] - f_val),\n",
+    "                \"iters\" : iters,\n",
+    "                \"ops\" : ops\n",
+    "            })\n",
+    "\n",
+    "    return pd.DataFrame.from_records(cases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rand_elipsoids_sol_stats_sgd(\n",
+    "    n_dim: int = 2, n_samples: int = 100, n_init_states = 100, dim_sample_ratio = \"single\",random_states: list = None, eps=0.01\n",
+    "):\n",
+    "    mu = np.ones(n_dim)\n",
+    "\n",
+    "    if random_states is None:\n",
+    "        random_states = np.random.randint(0, 4294967295, size=n_samples)\n",
+    "\n",
+    "    affine_ops = [make_spd_matrix(n_dim, random_state=state) for state in random_states]\n",
+    "    \n",
+    "    cases = []\n",
+    "\n",
+    "    if dim_sample_ratio == \"single\":\n",
+    "        m_dims = 1\n",
+    "\n",
+    "    else:\n",
+    "        m_dims = int(dim_sample_ratio * n_dim)\n",
+    "\n",
+    "    for i, A in enumerate(affine_ops):\n",
+    "\n",
+    "        solution = solve_elipsoid(A, mu)\n",
+    "\n",
+    "        eig_vigals = np.linalg.eigvals(A)\n",
+    "        conditional_number = max(eig_vigals) / min(eig_vigals)\n",
+    "\n",
+    "\n",
+    "        for _ in range(n_init_states):\n",
+    "\n",
+    "            x_init = project_to_constraint(np.random.randn(n_dim))\n",
+    "            x_opt, f_val, iters, ops = str_cvx_sgd_solve_elipsoid(A, mu, x_init, solution[-1], dim_sample_ratio, eps=eps)\n",
+    "            \n",
+    "\n",
+    "            cases.append({\n",
+    "                \"n_dims\": n_dim,\n",
+    "                \"example_id\" : i,\n",
+    "                \"conditional_number\": conditional_number,\n",
+    "                \"Lipschitz_L\" : max(eig_vigals),\n",
+    "                \"strong_convexity_alpha\": min(eig_vigals)*2,\n",
+    "                \"is_kkt_optimal\": is_kkt_optimal(quadform_grad(A, x_opt, mu), constraint_grad(x_opt)),\n",
+    "                \"solution_delta\": np.abs(solution[-1] - f_val),\n",
+    "                \"iters\" : iters,\n",
+    "                \"ops\" : ops,\n",
+    "                \"m_dims\": m_dims\n",
+    "            })\n",
+    "\n",
+    "    return pd.DataFrame.from_records(cases)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_gd_full_stats(n_dims = None):\n",
+    "\n",
+    "    if n_dims is None:\n",
+    "        n_dims = range(10, 110, 10)\n",
+    "\n",
+    "    df_l = []\n",
+    "\n",
+    "    for n in n_dims:\n",
+    "        df_l.append(rand_elipsoids_sol_stats_gd(n))\n",
+    "\n",
+    "    return pd.concat(df_l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_sgd_full_stats(n_dims = None, m_ratios = None):\n",
+    "\n",
+    "    if n_dims is None:\n",
+    "        n_dims = range(10, 110, 10)\n",
+    "\n",
+    "    if m_ratios is None:\n",
+    "        m_ratios = [\"single\", 1/8, 1/4, 1/2, 1]\n",
+    "\n",
+    "    df_l = []\n",
+    "\n",
+    "    for n in n_dims:\n",
+    "        for r in m_ratios:\n",
+    "            df_l.append(rand_elipsoids_sol_stats_sgd(n_dim=n, dim_sample_ratio=r))\n",
+    "\n",
+    "    return pd.concat(df_l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_96920/500574092.py:24: RuntimeWarning: divide by zero encountered in scalar divide\n",
+      "  lr = 2 / (alpha*dim_sample_ratio)\n"
+     ]
+    }
+   ],
+   "source": [
+    "gd_stats = make_gd_full_stats([2, 4])\n",
+    "sgd_stats = make_sgd_full_stats([2, 4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gd_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sgd_stats"
    ]
   },
   {
