--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,37 +353,245 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gd_stats = make_gd_full_stats([2, 4])\n",
+    "sgd_stats = make_sgd_full_stats([16, 32])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# gd_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_96920/500574092.py:24: RuntimeWarning: divide by zero encountered in scalar divide\n",
-      "  lr = 2 / (alpha*dim_sample_ratio)\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n_dims</th>\n",
+       "      <th>example_id</th>\n",
+       "      <th>conditional_number</th>\n",
+       "      <th>Lipschitz_L</th>\n",
+       "      <th>strong_convexity_alpha</th>\n",
+       "      <th>is_kkt_optimal</th>\n",
+       "      <th>solution_delta</th>\n",
+       "      <th>iters</th>\n",
+       "      <th>ops</th>\n",
+       "      <th>m_dims</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>937.109189</td>\n",
+       "      <td>16.397107</td>\n",
+       "      <td>0.034995</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.009483</td>\n",
+       "      <td>9176</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>937.109189</td>\n",
+       "      <td>16.397107</td>\n",
+       "      <td>0.034995</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.091247</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>937.109189</td>\n",
+       "      <td>16.397107</td>\n",
+       "      <td>0.034995</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.009430</td>\n",
+       "      <td>7138</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>937.109189</td>\n",
+       "      <td>16.397107</td>\n",
+       "      <td>0.034995</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.007736</td>\n",
+       "      <td>8800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>937.109189</td>\n",
+       "      <td>16.397107</td>\n",
+       "      <td>0.034995</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.009232</td>\n",
+       "      <td>8506</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2776.536580</td>\n",
+       "      <td>32.453638</td>\n",
+       "      <td>0.023377</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.105917</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2776.536580</td>\n",
+       "      <td>32.453638</td>\n",
+       "      <td>0.023377</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.248169</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2776.536580</td>\n",
+       "      <td>32.453638</td>\n",
+       "      <td>0.023377</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.179735</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2776.536580</td>\n",
+       "      <td>32.453638</td>\n",
+       "      <td>0.023377</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.078808</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>32</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2776.536580</td>\n",
+       "      <td>32.453638</td>\n",
+       "      <td>0.023377</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.209877</td>\n",
+       "      <td>10000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>600 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    n_dims  example_id  conditional_number  Lipschitz_L  \\\n",
+       "0       16           0          937.109189    16.397107   \n",
+       "1       16           0          937.109189    16.397107   \n",
+       "2       16           0          937.109189    16.397107   \n",
+       "3       16           0          937.109189    16.397107   \n",
+       "4       16           0          937.109189    16.397107   \n",
+       "..     ...         ...                 ...          ...   \n",
+       "95      32           9         2776.536580    32.453638   \n",
+       "96      32           9         2776.536580    32.453638   \n",
+       "97      32           9         2776.536580    32.453638   \n",
+       "98      32           9         2776.536580    32.453638   \n",
+       "99      32           9         2776.536580    32.453638   \n",
+       "\n",
+       "    strong_convexity_alpha  is_kkt_optimal  solution_delta  iters  ops  m_dims  \n",
+       "0                 0.034995            True        0.009483   9176    0       2  \n",
+       "1                 0.034995           False        0.091247  10000    0       2  \n",
+       "2                 0.034995            True        0.009430   7138    0       2  \n",
+       "3                 0.034995            True        0.007736   8800    0       2  \n",
+       "4                 0.034995            True        0.009232   8506    0       2  \n",
+       "..                     ...             ...             ...    ...  ...     ...  \n",
+       "95                0.023377           False        0.105917  10000    0      16  \n",
+       "96                0.023377           False        0.248169  10000    0      16  \n",
+       "97                0.023377           False        0.179735  10000    0      16  \n",
+       "98                0.023377            True        0.078808  10000    0      16  \n",
+       "99                0.023377           False        0.209877  10000    0      16  \n",
+       "\n",
+       "[600 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": [
-    "gd_stats = make_gd_full_stats([2, 4])\n",
-    "sgd_stats = make_sgd_full_stats([2, 4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gd_stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "sgd_stats"
    ]
