--- a/lab_2.ipynb
+++ b/lab_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
     "import cvxpy as cp\n",
     "import time\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import numba as nb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,40 +26,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def quadform_grad(A, x, mu):  # Complexity of 1st oracle is n + n^2\n",
     "    return A @ (x - mu) * 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def atom_quadform_grad(A, x, mu, i):\n",
     "    return np.dot(A[:, i], x - mu) * 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def constraint_grad(x):\n",
     "    return 2 * x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def project_to_constraint(x):\n",
     "    x_norm = np.linalg.norm(x)\n",
     "    return x if x_norm <= 1 else x / x_norm"
@@ -66,10 +71,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def is_kkt_optimal(grad_obj, grad_constraint, eps=0.01):\n",
     "\n",
     "    dot = np.dot(-grad_obj, grad_constraint)\n",
@@ -84,10 +90,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def solve_elipsoid(A, mu):\n",
     "\n",
     "    x = cp.Variable(A.shape[0])\n",
@@ -105,10 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def str_cvx_gd_solve_elipsoid(\n",
     "    A, mu, x_init, f_star, eps=0.01, max_iters=10000, return_history=False\n",
     "):\n",
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +186,6 @@
     "    x_new = x_init.copy()\n",
     "\n",
     "    iterations = 0\n",
-    "    operations = 0\n",
     "\n",
     "    precision_history = [(x_new - mu).T @ A @ (x_new - mu) - f_star]\n",
     "\n",
@@ -187,9 +194,12 @@
     "        step_lr = lr / (iterations + 1)\n",
     "\n",
     "        sampled_dims = np.random.choice(n_dims, size=m_dims, replace=False)\n",
+    "        \n",
+    "        grad = 2 * A[:, sampled_dims].T @ (x_new - mu)\n",
+    "        x_new[sampled_dims] -= step_lr * grad\n",
     "\n",
-    "        for i in sampled_dims:\n",
-    "            x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i)\n",
+    "        # for i in sampled_dims:\n",
+    "        #     x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i)\n",
     "\n",
     "        x_new = project_to_constraint(x_new)\n",
     "\n",
@@ -206,15 +216,16 @@
     "    if return_history:\n",
     "        return x_new, iterations, f_val, precision_history\n",
     "\n",
-    "    return x_new, f_val, iterations, operations"
+    "    return x_new, f_val, iterations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def rand_elipsoids_sol_stats_gd(\n",
     "    n_dim: int = 2, n_samples: int = 100, n_init_states = 100, random_states: list = None, eps=0.01\n",
     "):\n",
@@ -238,7 +249,9 @@
     "        for _ in range(n_init_states):\n",
     "\n",
     "            x_init = project_to_constraint(np.random.randn(n_dim))\n",
-    "            x_opt, f_val, iters, ops = str_cvx_gd_solve_elipsoid(A, mu, x_init, solution[-1], eps=eps)\n",
+    "            start_time = time.time()\n",
+    "            x_opt, f_val, iters = str_cvx_gd_solve_elipsoid(A, mu, x_init, solution[-1], eps=eps)\n",
+    "            time_elapsed = time.time() - start_time\n",
     "            \n",
     "            cases.append({\n",
     "                \"n_dims\": n_dim,\n",
@@ -249,7 +262,7 @@
     "                \"is_kkt_optimal\": is_kkt_optimal(quadform_grad(A, x_opt, mu), constraint_grad(x_opt)),\n",
     "                \"solution_delta\": np.abs(solution[-1] - f_val),\n",
     "                \"iters\" : iters,\n",
-    "                \"ops\" : ops\n",
+    "                \"time\": time_elapsed\n",
     "            })\n",
     "\n",
     "    return pd.DataFrame.from_records(cases)"
@@ -257,10 +270,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def rand_elipsoids_sol_stats_sgd(\n",
     "    n_dim: int = 2, n_samples: int = 100, n_init_states = 100, dim_sample_ratio = \"single\",random_states: list = None, eps=0.01\n",
     "):\n",
@@ -290,8 +304,9 @@
     "        for _ in range(n_init_states):\n",
     "\n",
     "            x_init = project_to_constraint(np.random.randn(n_dim))\n",
-    "            x_opt, f_val, iters, ops = str_cvx_sgd_solve_elipsoid(A, mu, x_init, solution[-1], dim_sample_ratio, eps=eps)\n",
-    "            \n",
+    "            start_time = time.time()\n",
+    "            x_opt, f_val, iters = str_cvx_sgd_solve_elipsoid(A, mu, x_init, solution[-1], dim_sample_ratio, eps=eps)\n",
+    "            time_elapsed = time.time() - start_time\n",
     "\n",
     "            cases.append({\n",
     "                \"n_dims\": n_dim,\n",
@@ -302,7 +317,7 @@
     "                \"is_kkt_optimal\": is_kkt_optimal(quadform_grad(A, x_opt, mu), constraint_grad(x_opt)),\n",
     "                \"solution_delta\": np.abs(solution[-1] - f_val),\n",
     "                \"iters\" : iters,\n",
-    "                \"ops\" : ops,\n",
+    "                \"time\": time_elapsed,\n",
     "                \"m_dims\": m_dims\n",
     "            })\n",
     "\n",
@@ -311,26 +326,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def make_gd_full_stats(n_dims = None):\n",
     "\n",
     "    if n_dims is None:\n",
     "        n_dims = range(10, 110, 10)\n",
     "\n",
     "    df_l = []\n",
-    "\n",
+    "    print('-------------------------')\n",
     "    for n in n_dims:\n",
-    "        df_l.append(rand_elipsoids_sol_stats_gd(n))\n",
+    "        print(f'Dim: {n}')\n",
+    "        print('-------------------------')\n",
+    "        df_l.append(rand_elipsoids_sol_stats_gd(n, n_samples=10, n_init_states=10))\n",
     "\n",
     "    return pd.concat(df_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,29 +359,80 @@
     "\n",
     "    if m_ratios is None:\n",
     "        m_ratios = [\"single\", 1/8, 1/4, 1/2, 1]\n",
+    "        # m_ratios = [1]\n",
     "\n",
     "    df_l = []\n",
     "\n",
+    "    print('-------------------------')\n",
     "    for n in n_dims:\n",
     "        for r in m_ratios:\n",
-    "            df_l.append(rand_elipsoids_sol_stats_sgd(n_dim=n, dim_sample_ratio=r))\n",
+    "            print(f'Dim: {n} Ratio: {r}')\n",
+    "            df_l.append(rand_elipsoids_sol_stats_sgd(n_dim=n, dim_sample_ratio=r, n_samples=10, n_init_states=10))\n",
+    "            # print(f'Appended df of length {len(df_l[-1])}')\n",
+    "        print('-------------------------')\n",
     "\n",
     "    return pd.concat(df_l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------\n",
+      "Dim: 10 Ratio: single\n",
+      "Dim: 10 Ratio: 0.125\n",
+      "Dim: 10 Ratio: 0.25\n",
+      "Dim: 10 Ratio: 0.5\n",
+      "Dim: 10 Ratio: 1\n",
+      "-------------------------\n",
+      "Dim: 20 Ratio: single\n",
+      "Dim: 20 Ratio: 0.125\n",
+      "Dim: 20 Ratio: 0.25\n",
+      "Dim: 20 Ratio: 0.5\n",
+      "Dim: 20 Ratio: 1\n",
+      "-------------------------\n",
+      "Dim: 30 Ratio: single\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[126], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# gd_stats = make_gd_full_stats([2, 4])\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m sgd_stats \u001b[38;5;241m=\u001b[39m \u001b[43mmake_sgd_full_stats\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m sgd_stats\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msgd_stats.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[125], line 16\u001b[0m, in \u001b[0;36mmake_sgd_full_stats\u001b[0;34m(n_dims, m_ratios)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m r \u001b[38;5;129;01min\u001b[39;00m m_ratios:\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mDim: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Ratio: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mr\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m---> 16\u001b[0m     df_l\u001b[38;5;241m.\u001b[39mappend(\u001b[43mrand_elipsoids_sol_stats_sgd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_dim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim_sample_ratio\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mr\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_samples\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_init_states\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     17\u001b[0m     \u001b[38;5;66;03m# print(f'Appended df of length {len(df_l[-1])}')\u001b[39;00m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-------------------------\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[119], line 31\u001b[0m, in \u001b[0;36mrand_elipsoids_sol_stats_sgd\u001b[0;34m(n_dim, n_samples, n_init_states, dim_sample_ratio, random_states, eps)\u001b[0m\n\u001b[1;32m     29\u001b[0m x_init \u001b[38;5;241m=\u001b[39m project_to_constraint(np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandn(n_dim))\n\u001b[1;32m     30\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m---> 31\u001b[0m x_opt, f_val, iters \u001b[38;5;241m=\u001b[39m \u001b[43mstr_cvx_sgd_solve_elipsoid\u001b[49m\u001b[43m(\u001b[49m\u001b[43mA\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmu\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx_init\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msolution\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdim_sample_ratio\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43meps\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43meps\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m time_elapsed \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime() \u001b[38;5;241m-\u001b[39m start_time\n\u001b[1;32m     34\u001b[0m cases\u001b[38;5;241m.\u001b[39mappend({\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mn_dims\u001b[39m\u001b[38;5;124m\"\u001b[39m: n_dim,\n\u001b[1;32m     36\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexample_id\u001b[39m\u001b[38;5;124m\"\u001b[39m : i,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mm_dims\u001b[39m\u001b[38;5;124m\"\u001b[39m: m_dims\n\u001b[1;32m     45\u001b[0m })\n",
+      "Cell \u001b[0;32mIn[101], line 38\u001b[0m, in \u001b[0;36mstr_cvx_sgd_solve_elipsoid\u001b[0;34m(A, mu, x_init, f_star, dim_sample_ratio, eps, max_iters, return_history)\u001b[0m\n\u001b[1;32m     34\u001b[0m step_lr \u001b[38;5;241m=\u001b[39m lr \u001b[38;5;241m/\u001b[39m (iterations \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     36\u001b[0m sampled_dims \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mchoice(n_dims, size\u001b[38;5;241m=\u001b[39mm_dims, replace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m---> 38\u001b[0m grad \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[43mA\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msampled_dims\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mT \u001b[38;5;241m@\u001b[39m (x_new \u001b[38;5;241m-\u001b[39m mu)\n\u001b[1;32m     39\u001b[0m x_new[sampled_dims] \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m step_lr \u001b[38;5;241m*\u001b[39m grad\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m# for i in sampled_dims:\u001b[39;00m\n\u001b[1;32m     42\u001b[0m \u001b[38;5;66;03m#     x_new[i] -= step_lr * atom_quadform_grad(A, x_new, mu, i)\u001b[39;00m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# gd_stats = make_gd_full_stats([2, 4])\n",
-    "sgd_stats = make_sgd_full_stats([16, 32])"
+    "sgd_stats = make_sgd_full_stats()\n",
+    "sgd_stats.to_csv('sgd_stats.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gd_stats = make_gd_full_stats()\n",
+    "gd_stats.to_csv('gd_stats.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -595,18 +664,11 @@
    "source": [
     "sgd_stats"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
