Small refactoring tasks 1 and 2

--- a/lab3.ipynb
+++ b/lab3.ipynb
@@ -2,33 +2,59 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "e6eyZNKeajrD"
+      },
+      "source": [
+        "# Equality constrained analytic centering"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "<i>minimize</i> $f(x)=-\\sum_{i=1}^{n}log(x_i)$ <br>\n",
         "<i>subject to</i> $Ax=b$ <br>"
-      ]
+      ],
+      "metadata": {
+        "id": "LvQYB8QyhQbQ"
+      }
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
       "source": [
-        "Исследование выпуклости задачи:<br>\n",
-        "$f(x)$ является суммой функций $-logx_i$ <br>\n",
+        "## Исследование выпуклости задачи"
+      ],
+      "metadata": {
+        "id": "Fber3a13hSz-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6doj_hGeajrG"
+      },
+      "source": [
+        "$f(x)$ является суммой функций $-logx_i$\n",
+        "<br><br>\n",
         "$\\frac{d^2}{dx_i^2}(-logx_i) = \\frac{1}{x_i^2} > 0$, а значит функция $-logx_i$ - выпуклая. <br>\n",
+        "<br>\n",
         "Из этого следует что целевая функция $f(x)$ также выпукла так как является суммой выпуклых функций.\n",
-        "Ограничение $Ax=b$ задает выпуклое множество. <br>\n",
-        "Таким образом, задача является выпуклой."
+        "Ограничение $Ax=b$ задаёт аффинное множество, которое всегда является выпуклым. Таким образом, задача минимизации является **выпуклой**."
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "7Z7jdIzRajrH"
+      },
       "source": [
         "Лагранжиан: <br>\n",
         "$L(x,λ)=-\\sum_{i=1}^{n}(logx_i)+λ^T(Ax-b)$ <br>\n",
-        "Необходимые условия минимума: <br>\n",
+        "\n",
+        "Необходимые условия минимума (ККТ): <br>\n",
         "$\\nabla L=-(\\frac{1}{x_1},\\frac{1}{x_2}, ... ,\\frac{1}{x_n})^T+A^Tλ=0 ⇒ A^Tλ=(\\frac{1}{x_1},\\frac{1}{x_2}, ... ,\\frac{1}{x_n})^T$ <br>\n",
         "$Ax=b$ <br>\n",
+        "\n",
         "В итоге имеем систему: <br>\n",
         "$\\begin{cases}\n",
         "A^Tλ=diag(x)^{-1}1 \\\\\n",
@@ -38,25 +64,56 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
       "source": [
-        "Двойственная задача: <br>\n",
+        "## Двойственная задача"
+      ],
+      "metadata": {
+        "id": "5R50tsWFhqKu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FuZwWvj9ajrI"
+      },
+      "source": [
+        "Определим двойственную функцию как нижнюю границу лагранжиана по переменной $x$:\n",
         "$g(λ)=\\inf\\limits_{x > 0} L(x, \\lambda)$ <br>\n",
-        "$\\nabla L=-(\\frac{1}{x_1},\\frac{1}{x_2}, ... ,\\frac{1}{x_n})^T+A^Tλ=0$ ⇒\n",
+        "$\\nabla L=-(\\frac{1}{x_1},\\frac{1}{x_2}, ... ,\\frac{1}{x_n})^T+A^Tλ=0$ ⇒ рассмотрим условия стационарности ⇒\n",
         "$\\frac{1}{x_i}=(A^Tλ)_i$ ⇒\n",
         "$x_i=\\frac{1}{(A^Tλ)_i}$ <br>\n",
+        "\n",
         "Подставим выраженный $x$ в лагранжиан: <br>\n",
         "$g(λ)=\\sum_{i=1}^{n}(log(A^T\\lambda)_i)+\\sum_{i=1}^{n}(A^T\\lambda_i*\\frac{1}{A^T\\lambda_i})-\\lambda^Tb$ <br>\n",
-        "$g(λ)=\\sum_{i=1}^{n}(log(A^T\\lambda)_i)+n-\\lambda^Tb$ <br>\n",
-        "Имеем двойственную задачу: <br>\n",
-        "<i>maximize</i> $\\sum_{i=1}^{n}(log(A^T\\lambda)_i)+n-\\lambda^Tb$ <br>\n",
-        "<i>subject to</i> $A^T\\lambda>0$"
+        "$g(λ)=\\sum_{i=1}^{n}(log(A^T\\lambda)_i)+n-\\lambda^Tb$"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Имеем двойственную задачу: <br>\n",
+        "<i>maximize</i> $\\sum_{i=1}^{n}(log(A^T\\lambda)_i)+n-\\lambda^Tb$ <br>\n",
+        "<i>subject to</i> $A^T\\lambda>0$"
+      ],
+      "metadata": {
+        "id": "EUANDVCfhvyj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Импорты"
+      ],
+      "metadata": {
+        "id": "uGKDzEOlh0Xo"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {},
+      "execution_count": 2,
+      "metadata": {
+        "id": "6YdzIx_vajrJ"
+      },
       "outputs": [],
       "source": [
         "import numpy as np\n",
@@ -71,40 +128,56 @@
         "id": "Z0Fn8VjXiBHQ"
       },
       "source": [
-        "**<h1>Генерация примеров, CVX solver</h1>**"
+        "## Для каждого значения размерности $n ∈ {10,20,...,100}$ сгенерируйте $N = 100$ тестовых примеров В каждом случае найдите глобальный минимум, $x^* ∈ R^n$, с помощью CVX"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S0c9HlDfh9Fl",
-        "outputId": "eb2ba884-6876-4181-f553-312749a7e4b3"
+        "outputId": "50ab2af5-b11e-4bea-a069-0adc69a353e4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "N = 10\n",
-            "N = 20\n",
-            "N = 30\n",
-            "N = 40\n",
-            "N = 50\n",
-            "N = 60\n",
-            "N = 70\n",
-            "N = 80\n",
-            "N = 90\n",
-            "N = 100\n"
+            "Processing N = 10: 100%|██████████| 100/100 [00:00<00:00, 145.53it/s]\n",
+            "Processing N = 20: 100%|██████████| 100/100 [00:00<00:00, 134.42it/s]\n",
+            "Processing N = 30: 100%|██████████| 100/100 [00:00<00:00, 113.24it/s]\n",
+            "Processing N = 40: 100%|██████████| 100/100 [00:01<00:00, 95.97it/s]\n",
+            "Processing N = 50: 100%|██████████| 100/100 [00:01<00:00, 80.19it/s]\n",
+            "Processing N = 60: 100%|██████████| 100/100 [00:01<00:00, 65.24it/s]\n",
+            "Processing N = 70: 100%|██████████| 100/100 [00:02<00:00, 43.85it/s]\n",
+            "Processing N = 80: 100%|██████████| 100/100 [00:02<00:00, 37.80it/s]\n",
+            "Processing N = 90: 100%|██████████| 100/100 [00:02<00:00, 37.33it/s]\n",
+            "Processing N = 100: 100%|██████████| 100/100 [00:03<00:00, 31.15it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Done.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
           ]
         }
       ],
       "source": [
+        "# Генерирует задачу гарантированно допустимую и ограниченную снизу\n",
         "def generate_problem(n):\n",
-        "  x_true = np.random.uniform(low=0.1, high=100, size=n)\n",
+        "  x_true = np.random.uniform(low=0.1, high=100, size=n) # Все элементы x > 0\n",
         "  A = np.random.randn(n, n)\n",
         "  b = A @ x_true\n",
         "  return A, b\n",
@@ -128,18 +201,20 @@
         "\n",
         "N = 100\n",
         "for n in dimensions:\n",
-        "  print(f\"N = {n}\")\n",
-        "  for _ in range(N):\n",
+        "  for _ in tqdm(range(N), desc=f\"Processing N = {n}\"):\n",
         "    A, b = generate_problem(n)\n",
         "    start_time = time.time()\n",
         "    x_star, min_value = solve_problem(A, b)\n",
         "    elapsed_time = time.time() - start_time\n",
         "    if x_star is None:\n",
         "      print(\"The problem is infeasible or unbounded.\")\n",
+        "      continue\n",
         "    cvx_opts[n].append(min_value)\n",
         "    cvx_time[n].append(elapsed_time)\n",
         "    b_generated[n].append(b)\n",
-        "    a_generated[n].append(A)\n"
+        "    a_generated[n].append(A)\n",
+        "\n",
+        "print(\"\\nDone.\")"
       ]
     },
     {
@@ -319,18 +394,18 @@
         "  x = x_init.copy()\n",
         "  n = x.shape[0]\n",
         "  m = A.shape[0]\n",
-        "  \n",
+        "\n",
         "  A_pinv = np.linalg.pinv(A)\n",
         "  x = A_pinv @ b  # Начальная проекция на допустимое множество\n",
         "  x = np.maximum(x, 1e-6)\n",
-        "  \n",
+        "\n",
         "  I = np.eye(n)\n",
-        "  \n",
+        "\n",
         "  for num_iter in range(max_iters):\n",
         "      inv_x = 1.0 / x\n",
         "      grad = -inv_x\n",
         "      hess = np.diag(inv_x**2)\n",
-        "      \n",
+        "\n",
         "      try:\n",
         "\n",
         "          KKT = hess + 1e-8 * I\n",
@@ -338,7 +413,7 @@
         "          dx -= A_pinv @ (A @ dx)  # Проекция на допустимое множество\n",
         "      except:\n",
         "          print('Error')\n",
-        "      \n",
+        "\n",
         "      #Выбор шага с гарантией положительности\n",
         "      t = 1.0\n",
         "      for _ in range(10):\n",
@@ -348,12 +423,12 @@
         "          t *= 0.5\n",
         "      else:\n",
         "          t = 0.0  # Если не нашли подходящий шаг\n",
-        "      \n",
+        "\n",
         "      x += t * dx\n",
-        "      \n",
+        "\n",
         "      if abs(obj_func(x) - cvx_opt) < eps:\n",
         "          break\n",
-        "  \n",
+        "\n",
         "  return x, obj_func(x), abs(obj_func(x) - cvx_opt), num_iter + 1\n",
         "\n",
         "newton_opts = {n_val:[] for n_val in dimensions}\n",
@@ -392,8 +467,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "elIb3S8CajrP",
+        "outputId": "43ad7c24-0e3d-471f-9be3-e3c8779124f5"
+      },
       "outputs": [
         {
           "data": {
