all dimensions calculations done

--- a/lab_4.ipynb
+++ b/lab_4.ipynb
@@ -461,11 +461,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": null,
    "id": "04d56d9c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get saved data instead of running barrier method again\n",
     "if os.path.exists('data/lab4/data.pkl'):\n",
     "    with open('data/lab4/data.pkl', 'rb') as fin:\n",
     "        lab4_data = pickle.load(fin)\n",
