--- a/lab_4.ipynb
+++ b/lab_4.ipynb
@@ -475,7 +475,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "3d074261",
       "metadata": {
         "id": "3d074261"
@@ -583,7 +583,7 @@
         "        history.append(err)\n",
         "\n",
         "        # === Условие останова ===\n",
-        "        if len(history) > 1 and err < eps and gap <= eps: #and kkt_norm <= 1e-5: #: #\n",
+        "        if len(history) > 1 and err < eps and gap <= eps:\n",
         "            break\n",
         "\n",
         "        # === Усиливаем барьер ===\n",
